# grid

./: .gitignore  Cargo.toml  Makefile  Makefile.old  README.md  SAFETY_FIXES.md  WORKING_SYSTEM.md  config.toml  config.toml.example
docs/: ALIGNMENT_SUMMARY.md  README.md  architecture.md  autonomous_optimization.md  business-logic.md  cli-reference.md  configuration.md
examples/: progress_demo.rs
src/: cli_config.rs  config.rs  error.rs  grid_trader.rs  lib.rs  main.rs  market_state.rs  progress.rs  types.rs  validation.rs
src/backtesting/: analytics.rs  engine.rs  kraken_api.rs  markov.rs  mod.rs  transaction_costs.rs  vectorized.rs
src/cli/: backtest_commands.rs  trade_commands.rs
src/clients/: kraken_api.rs  kraken_ws.rs  mod.rs
src/core/: error_handling.rs  grid_trader.rs  live_trading.rs  market_state.rs  mod.rs  monitoring.rs  position_manager.rs
src/db/: execution.rs  mod.rs  strategy.rs  strategy_service.rs  trade.rs
src/db/migrations/: V1__initial_schema.sql
src/optimization/: grid_optimizer.rs  mod.rs  parameter_search.rs  risk_optimizer.rs
src/simulation/: adapter.rs  execution_simulator.rs  matching_engine.rs  mod.rs  order_book.rs  simulation_engine.rs
strategies/: btcgbp_strategy.json  xrpgbp_strategy.json
tests/: README.md  backtesting_tests.rs  config_tests.rs  database_tests.rs  e2e_tests.rs  grid_trader_tests.rs  integration_tests.rs
tests/common/: mod.rs
